[gd_scene load_steps=17 format=2]

[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/Sky/DaySky.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/StadiumStand/StadiumStand.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/BackgroundCrowd/BackgroundCrowd.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/ArenaBackgrounds/Stadium/art/stadium_background.png" type="Texture" id=4]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/AdBoards/AdBoard.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameComponents/ArenaBackgrounds/Stadium/stadium_background.gd" type="Script" id=6]
[ext_resource path="res://GameComponents/Fireworks/fireworks.gd" type="Script" id=7]
[ext_resource path="res://Assets/ArenaBackgrounds/art/stadium_light.png" type="Texture" id=8]
[ext_resource path="res://Assets/GameMusic/stadium.ogg" type="AudioStream" id=9]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/Seagull/Seagull.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/ArenaBackgrounds/Stadium/art/stadium_shadow.png" type="Texture" id=11]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/AdBoards/ad_board_player.gd" type="Script" id=12]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/BackgroundCrowd/crowd_control.gd" type="Script" id=13]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/Sky/NightSky.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1100, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fly_into_scene"
length = 45.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.1, 9, 12, 18.1, 18.4, 19, 19.9, 20, 20.9, 21, 21.9, 22, 22.7, 22.8, 24, 24.1, 24.9, 25, 25.9, 26, 26.9, 27, 30, 35, 40, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1100, -200 ), Vector2( 940, 23 ), Vector2( 940, 23 ), Vector2( 640, 500 ), Vector2( 640, 500 ), Vector2( 650, 475 ), Vector2( 660, 510 ), Vector2( 660, 510 ), Vector2( 650, 510 ), Vector2( 650, 510 ), Vector2( 640, 510 ), Vector2( 640, 510 ), Vector2( 630, 510 ), Vector2( 630, 510 ), Vector2( 620, 510 ), Vector2( 620, 510 ), Vector2( 630, 510 ), Vector2( 630, 510 ), Vector2( 640, 510 ), Vector2( 640, 510 ), Vector2( 650, 510 ), Vector2( 650, 510 ), Vector2( 660, 510 ), Vector2( 660, 510 ), Vector2( 350, 113 ), Vector2( 350, 113 ), Vector2( -200, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 13.8, 23.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 9, 12, 18.1, 19, 30, 35, 40, 45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.4, 0.4 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.6, 3.8, 5, 6.9, 9, 11.5, 15.4, 18.1, 18.7, 19.3, 19.9, 20.9, 21.9, 22.8, 24, 24.9, 25.9, 26.9, 30, 34.6, 35.4, 36.2, 38.2, 38.9, 40 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "fly"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "look"
}, {
"args": [  ],
"method": "stand"
}, {
"args": [  ],
"method": "look"
}, {
"args": [  ],
"method": "take_off"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "look"
}, {
"args": [  ],
"method": "take_off"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "look"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "take_off"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "take_off"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 36.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stun_seagull"
} ]
}

[node name="StadiumBackground" type="Node2D"]
script = ExtResource( 6 )

[node name="CrowdControl" type="Node" parent="."]
script = ExtResource( 13 )

[node name="NightSky" parent="." instance=ExtResource( 14 )]

[node name="DaySky" parent="." instance=ExtResource( 1 )]

[node name="Fireworks" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 148.0
margin_top = 32.0
margin_right = 748.0
margin_bottom = 132.0
rect_min_size = Vector2( 600, 100 )
color = Color( 1, 0.5, 0.5, 0.5 )
script = ExtResource( 7 )
_firework_scale = 0.8

[node name="StadiumBackground" type="Sprite" parent="."]
position = Vector2( 640, 400 )
texture = ExtResource( 4 )

[node name="BackgroundCrowdsHome" type="Node2D" parent="."]
position = Vector2( 260, 380 )

[node name="BackgroundCrowd0" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -155, -60 )

[node name="BackgroundCrowd1" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 200, -60 )

[node name="BackgroundCrowd2" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -170, -30 )

[node name="BackgroundCrowd3" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 195, -30 )

[node name="BackgroundCrowd4" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -185, 0 )

[node name="BackgroundCrowd5" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 190, 0 )

[node name="BackgroundCrowd6" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -200, 30 )

[node name="BackgroundCrowd7" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 185, 30 )

[node name="BackgroundCrowdsAway" type="Node2D" parent="."]
position = Vector2( 1020, 380 )

[node name="BackgroundCrowd0" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -200, -60 )
frame = 1
team = 2

[node name="BackgroundCrowd1" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 155, -60 )
frame = 1
team = 2

[node name="BackgroundCrowd2" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -195, -30 )
frame = 1
team = 2

[node name="BackgroundCrowd3" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 170, -30 )
frame = 1
team = 2

[node name="BackgroundCrowd4" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -190, 0 )
frame = 1
team = 2

[node name="BackgroundCrowd5" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 185, 0 )
frame = 1
team = 2

[node name="BackgroundCrowd6" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -185, 30 )
frame = 1
team = 2

[node name="BackgroundCrowd7" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 200, 30 )
frame = 1
team = 2

[node name="StadiumStandsHome" type="Node2D" parent="."]
position = Vector2( 260, 490 )

[node name="StadiumStand0" parent="StadiumStandsHome" instance=ExtResource( 2 )]
position = Vector2( -215, -20 )
team = 1

[node name="StadiumStand1" parent="StadiumStandsHome" instance=ExtResource( 2 )]
position = Vector2( 180, -20 )
team = 1

[node name="StadiumStand2" parent="StadiumStandsHome" instance=ExtResource( 2 )]
position = Vector2( -230, 20 )
team = 1

[node name="StadiumStand3" parent="StadiumStandsHome" instance=ExtResource( 2 )]
position = Vector2( 175, 20 )
team = 1

[node name="StadiumStandsAway" type="Node2D" parent="."]
position = Vector2( 1020, 490 )

[node name="StadiumStand0" parent="StadiumStandsAway" instance=ExtResource( 2 )]
position = Vector2( -180, -20 )
flip_stand = true
team = 2

[node name="StadiumStand1" parent="StadiumStandsAway" instance=ExtResource( 2 )]
position = Vector2( 215, -20 )
flip_stand = true
team = 2

[node name="StadiumStand2" parent="StadiumStandsAway" instance=ExtResource( 2 )]
position = Vector2( -175, 20 )
flip_stand = true
team = 2

[node name="StadiumStand3" parent="StadiumStandsAway" instance=ExtResource( 2 )]
position = Vector2( 230, 20 )
flip_stand = true
team = 2

[node name="Advertising" type="Node2D" parent="."]
position = Vector2( 640, 577 )
script = ExtResource( 12 )

[node name="AdBoard0" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( -560, 0 )

[node name="AdBoard1" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( -280, 0 )

[node name="AdBoard2" parent="Advertising" instance=ExtResource( 5 )]

[node name="AdBoard3" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( 280, 0 )

[node name="AdBoard4" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( 560, 0 )

[node name="AdBoardJumbo" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( 606, -458 )
scale = Vector2( 4, 4 )

[node name="StadiumShadow" type="Sprite" parent="."]
position = Vector2( 640, 328 )
texture = ExtResource( 11 )

[node name="StadiumLights" type="Node2D" parent="."]
position = Vector2( 335, 137 )

[node name="StadiumLight0" type="Sprite" parent="StadiumLights"]
position = Vector2( -331, 0 )
texture = ExtResource( 8 )
vframes = 2

[node name="StadiumLight1" type="Sprite" parent="StadiumLights"]
texture = ExtResource( 8 )
vframes = 2

[node name="StadiumLight2" type="Sprite" parent="StadiumLights"]
position = Vector2( 293, 0 )
texture = ExtResource( 8 )
vframes = 2

[node name="Seagull" parent="." instance=ExtResource( 10 )]
position = Vector2( 1100, -200 )
scale = Vector2( 0.5, 0.5 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Seagull"]
autoplay = "RESET"
anims/RESET = SubResource( 1 )
anims/fly_into_scene = SubResource( 2 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
autoplay = true
bus = "Music"

[node name="Tween" type="Tween" parent="."]
